--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.4",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"postcss": "^8.4.12",
+		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"prettier-plugin-tailwindcss": "^0.1.10",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.1",
+		"svelte-preprocess": "^4.10.5",
+		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
