--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
+		"@poppanator/sveltekit-svg": "^0.3.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.4",
