--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"test": "vitest"
+		"test": "vitest",
+		"test:browser": "playwright test"
 	},
 	"devDependencies": {
+		"@playwright-testing-library/test": "^4.2.1",
+		"@playwright/test": "^1.21.1",
 		"@poppanator/sveltekit-svg": "^0.3.2",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
@@ -27,25 +30,26 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"jsdom": "^19.0.0",
+		"playwright-testing-library": "^4.2.1",
 		"postcss": "^8.4.12",
 		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"prettier-plugin-tailwindcss": "^0.1.10",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.7.0",
 		"svelte-preprocess": "^4.10.5",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2",
-		"vitest": "^0.10.2",
+		"vitest": "^0.12.4",
 		"vitest-svelte-kit": "0.0.6"
 	},
 	"type": "module",
 	"engines": {
-		"node": "14.x"
+		"node": "16.x"
 	},
 	"volta": {
-		"node": "14.19.1"
+		"node": "16.15.0"
 	}
 }
