--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,6 +26,8 @@ jobs:
           npm list -g --depth 0
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
